# SD2_DRONE

./: .gitignore  README.md
Arduino Code/Servo_Sweep_Final/: Servo_Sweep_Final.ino
Arduino Code/perfect_uart_w_servos/: perfect_uart_w_servos.ino
Arduino Code/read_2_bytes/: read_2_bytes.ino
Arduino Code/slave_code/: crc_8.h  slave_code.ino
Arduino Code/slave_code_no_quartz/: slave_code_no_quartz.ino
Arduino Code/uart_w_servos/: uart_w_servos.ino
Protobuffers/: Makefile  detect_pipe.proto
Python_Serial_Master/: .Detection_Class.py.swp  .deepstream_socket_thread.py.swp  .detections.py.swp  .master_thread.py.swp  .serial_thread.py.swp  .tracked_object.py.swp  Detection_Class.py  GUI_TOP.py  GUI_UI.py  Timer_Mod.py  deepstream_socket_thread.py  detect_pipe_pb2.py  detections.py  mainwindow.ui  master_thread.py  serial_thread.py  tracked_object.py
YOLO/configs/: tiny_drone.cfg
appsink_test/: gui_basic.py  mainwindow.ui
deepstream_proof_using_config/: Makefile  ckr-deepstream-app  config_infer_primary_yoloV3_tiny.txt  deepstream_app.c  deepstream_app_config_yoloV3_tiny.txt  deepstream_app_main.c  detect_pipe.pb-c.c  detect_pipe.pb-c.h  tiny_drone.data  yolov3-tiny.cfg
deepstream_proof_using_config/nvdsinfer_custom_impl_Yolo/: Makefile  detect_pipe.pb.cc  detect_pipe.pb.h  nvdsparsebbox_Yolo.cpp  nvdsparsebbox_Yolo_ORIG.cpp
test_code/: test_serial.py
test_code/test_zmq/: CMakeLists.txt  test_zmq.cpp  test_zmq.py
test_code/testing_gui/: GUI_TOP.py  GUI_UI.py  gui_basic.py  (+1 more)
testing_c_protobuf/: Makefile  ckr-test-c-protobuf  test_c_protobuf.c
(+2305 files in other folders)
